865bb8d28 - Fix gap for search page

--- a/styles/components/announcement_banner.scss
+++ b/styles/components/announcement_banner.scss
@@ -273,7 +273,7 @@ time.announcement-countdown {
 
   @media screen and (min-width: 60em) {
     .main-content {
-      padding-top: 120px;
+      padding-top: 30px;
     }
     
   #ais-sort-filter.sticky-active{
